@startuml

title 08.1. Business document progress and status synchronization

hide circle
skinparam linetype ortho

entity Order {
	* status: OrderStatus
}

entity OrderEntry {
	* quantity: decimal(14,4)
	shippedQuantity: decimal(14,4)?
	returnedQuantity: decimal(14,4)?
	canceledQuantity: decimal(14,4)?
}

entity Purchase {
	* status: PurchaseStatus
}

entity PurchaseEntry {
	* quantity: decimal(14,4)
	receivedQuantity: decimal(14,4)?
	returnedQuantity: decimal(14,4)?
}

entity InventoryDocument {
	* type: InventoryDocumentType
	* status: InventoryDocumentStatus
}

entity InventoryDocumentLine {
	* quantity: decimal(14,4)
	* direction: InventoryDirection
	orderEntry: OrderEntry?
	purchaseEntry: PurchaseEntry?
}

class InventoryPostingService <<service>>
class DocumentProgressRecalculator <<service>>
class BusinessDocumentStatusSynchronizer <<service>>

Order ||--o{ OrderEntry : has
Purchase ||--o{ PurchaseEntry : has
InventoryDocument ||--o{ InventoryDocumentLine : posts lines
OrderEntry |o--o{ InventoryDocumentLine : shipment/return source
PurchaseEntry |o--o{ InventoryDocumentLine : receipt/return source
InventoryPostingService --> InventoryDocument : post/cancel/reverse
InventoryPostingService --> DocumentProgressRecalculator : after posting result
DocumentProgressRecalculator --> OrderEntry : recalculate caches
DocumentProgressRecalculator --> PurchaseEntry : recalculate caches
DocumentProgressRecalculator --> BusinessDocumentStatusSynchronizer : provide progress totals
BusinessDocumentStatusSynchronizer --> Order : update status
BusinessDocumentStatusSynchronizer --> Purchase : update status

note right of DocumentProgressRecalculator
  Current project status:
  - DocumentProgressRecalculator is implemented.
  - It is invoked by InventoryPostingService after post,
    cancel and reversal flows.
  - OrderEntry and PurchaseEntry cache fields are rebuilt
    from posted inventory document lines.

  Implemented behavior:
  - Rebuild progress cache fields from posted document lines,
    not by incrementing blind counters.
  - Recalculation must be idempotent and safe after reversal.
  - Draft/canceled inventory docs do not contribute.
  - OrderEntry cache:
    shippedQuantity, returnedQuantity, canceledQuantity.
  - PurchaseEntry cache:
    receivedQuantity, returnedQuantity.
  - Source of truth remains posted InventoryDocumentLine
    plus resulting StockMovement.
end note

note right of BusinessDocumentStatusSynchronizer
  Order rules:
  - no shipped quantity and stock missing => awaiting_stock.
  - all shippable quantity available => ready_to_ship.
  - some shipped but not all => partially_shipped.
  - all non-canceled quantity shipped => shipped.
  - returns after shipment => partially_returned/returned.
  - delivered/completed require explicit business action;
    they are not inferred from stock alone.

  Purchase rules:
  - some received but not all => partially_received.
  - all expected quantity received => received.
  - completion requires explicit business closure.
  - supplier returns move to partially_returned/returned.
end note

note bottom
  Implementation status:

  Done:

  1. Added recalculation service for order/purchase line progress.
  2. Added synchronizer that derives stock-driven statuses only.
  3. Invoked both after InventoryPostingService post/cancel/reversal.
  4. Kept manual business confirmations separate:
     delivery confirmation, final completion, explicit cancellation.
  5. Added tests for partial/full shipment, partial/full receipt,
     returns, reversals, idempotent recalculation and status downgrade.

  Why this is separate from 08:
  stock posting changes inventory facts;
  this stage projects those facts back onto commercial documents.
end note

@enduml
